# scripts-and-notes

./: .gitignore  README.md  perceptron.f90
bash/: basics.sh  bonsai.sh
cpp/OMP/: README.md  main.cpp  pach  test2.cpp
cpp/basic/: CMakeLists.txt  main.cpp
cpp/basic/include/: templates.hpp
fortran/: fkw.f90
julia/tutorials/basic/: variables.jl
latex/Metropolis-theme/: README.md
latex/Metropolis-theme/test/: test.tex
python/2fa-keepass/: LICENSE
python/AndOTP_cli/: setup.py
python/AndOTP_cli/andOTP_cli/: 2FA.py
python/DRS4-PSI/: README.md  data.csv  data.csv_bck  data.csv_xx  setup.py
python/DRS4-PSI/DRSpy/: __init__.py  data-struct.py  data_struct.py  main.py
python/Inits/AndOTP_cli/: README.md
python/Inits/NeuralPy/: README.md
python/Inits/NeuralPy/docs/: conf.md
python/Inits/gpg_holder/: README.md
python/NeuralPy/: README.md  setup.py
python/NeuralPy/NeuralPy/: NeuralPy.py  Neuron.py  __init__.py
python/NeuralPy/docs/: NeuralPy.md  index.md
python/features/: mp.py  parse.py  requests.py
python/gpg_holder/gpg_holder/: __init__.py
python/gpio/: README.md
python/inits/2fa-keepass/: README.md  requirements.txt
python/inits/DRS4-PSI/: README.md
python/inits/gpg_holder/: setup.py
python/kivy/: app.py
python/npyscreen/: hw.py
python/scripts/termux_battery_stats/: README.md
python/security/mac_changer/: README.md  setup.py
python/termux_battery_stats/: __init__.py
python/tutorials/Design-Patterns/: interface.py  strategy.py
python/tutorials/Modules/: dataclass.py
python/tutorials/Programming-Paradigms/: asyncIO.py
(+26 files in other folders)
